--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ body {
       NECK
     </div>
     <div class="modal_select">
-      米種類
+      米タイプ選んでください
     </div>
     <div class="modal_choices_container">
       <div class="modal_choices_title">
